<resources>
    <string name="app_name">HelpingHand</string>
    <string name="pogchamp">Powered by PogChampSoftware</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registo</string>
    <string name="about">Sobre</string>
    <string name="login">Login</string>

    <!-- register strings -->
    <string name="username">Nome de Utilizador</string>
    <string name="prompt_confirm_password">Confirme Password</string>
    <string name="name">Nome da instituição</string>
    <string name="initials">Sigla da Instituição</string>
    <string name="token_id">TOKEN_ID</string>
    <string name="user_username">USER_USERNAME</string>
    <string name="role">ROLE</string>
    <string name="creation_date">CREATION_DATE</string>
    <string name="invalid_email">O seu email está inválido</string>
    <string name="refresh_token">REFRESH_TOKEN</string>
    <string name="invalid_confirm">A confirmação não é igual à password.</string>
    <string name="invalid_password_info">A password deve conter pelo menos 1 minúscula, 1 maiúscula, 1 número 1 carácter especial e pelo menos 8 caractéres.</string>
    <string name="home">Inicio</string>
    <string name="search">Pesquisa</string>
    <string name="profile">Perfil</string>
    <string name="logout">Logout</string>
    <string name="bem_vindo">"Bem-Vindo, "</string>
    <string name="maps">Mapa</string>
    <string name="events">Eventos</string>
    <string name="update_user">Atualizar perfil</string>
    <string name="phone">Número de Telefone</string>
    <string name="address">Morada</string>
    <string name="address2">Morada 2</string>
    <string name="city">Cidade</string>
    <string name="zipcode">Código Postal</string>
    <string name="change_password">Mudar Password</string>
    <string name="institution_name">Nome da Instituição</string>
    <string name="inst_id_txt">Id da Instituição</string>
    <string name="status">Estado</string>
    <string name="old_password">Password Antiga</string>
    <string name="new_password">Password Nova</string>
    <string name="confirm">Confirmar</string>
    <string name="delete_account">Apagar Conta</string>

    <string-array name="usertype">
        <item>Utilizador</item>
        <item>Instituição</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="create_event">Criar evento</string>
    <string name="join_event">Juntar-se a evento</string>
    <string name="mine_events">Meus Eventos</string>
    <string name="event_name">Nome do Evento</string>
    <string name="description">Descrição</string>
    <string name="start">Inicio</string>
    <string name="end">Fim</string>
    <string name="date">Data</string>
    <string name="hour">Hora</string>
    <string name="location">Localização</string>
    <string name="conditions">Condições</string>
    <string name="public_profile">Público</string>
    <string name="private_profile">Privado</string>
    <string name="list">Lista</string>
    <string name="name_event">Nome</string>
    <string name="creator">Criador</string>
    <string name="help">Ajudas</string>
    <string name="create_help">Criar Pedido</string>
    <string name="offer_help">Oferecer Ajuda</string>
    <string name="mine_help">Minhas</string>
    <string name="help_name">Nome do Pedido</string>
    <string name="expire_date">EXPIRE_DATE</string>
    <string name="help_creator">Criador</string>
    <string name="id">Id</string>
    <string name="conclude">Concluir</string>
    <string name="cancel">Cancelar</string>
    <string name="my_helps">Minhas ajudas</string>
    <string name="choose_helper">Escolher ajuda</string>
    <string name="rating">Rating</string>
    <string name="reliability">Riabilidade</string>
    <string name="choose">Escolher</string>
</resources>