<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/user_username_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/user_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/phone"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/user_phone_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:text="@string/address"
            />

        <TextView
            android:id="@+id/user_address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/address2"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/user_address2_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:text="@string/city"
            />

        <TextView
            android:id="@+id/user_city_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zipcode"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/user_zip_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/user_update_btn"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/update_user"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="10sp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/user_change_pass_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="10sp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/delete_user_acc_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:text="@string/delete_account"
                android:backgroundTint="#FF0000"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_change_pass_btn"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



</ScrollView>