<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/choose_helper_layout"
    >
    
    <androidx.cardview.widget.CardView
        android:id="@+id/helper_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/teal_700"
        >

        <TextView
            android:id="@+id/helper_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_event"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/helper_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:id="@+id/helper_reliability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/reliability"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />

        <Button
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="12sp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>