<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#29918A"
    android:id="@+id/offer_help_popup"
    >

    <TextView
        android:id="@+id/help_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/help_name"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/help_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/help_creator"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/help_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/help_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/description"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_creator"
        />

    <TextView
        android:id="@+id/help_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/start"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_desc"
        />

    <TextView
        android:id="@+id/help_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/location"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_time"
        />

    <Button
        android:id="@+id/pop_offer_help_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_loc"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/offer_help"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>