<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#29918A"
    android:id="@+id/pop_my_ev_layout"
    >

    <TextView
        android:id="@+id/pop_my_ev_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/name_event"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/pop_my_ev_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/pop_my_ev_name"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/start"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/pop_my_ev_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/pop_my_ev_start"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/end"
        android:textColor="@android:color/white"
        />

    <TextView
        android:id="@+id/pop_my_ev_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/pop_my_ev_end"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="7.5"
        android:text="@string/location"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/conclude_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conclude"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/pop_my_ev_loc"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:backgroundTint="#15E84E"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E32727"
        android:textStyle="bold"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/pop_my_ev_loc"
        app:layout_constraintStart_toEndOf="@id/conclude_btn"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/white"
        />


</androidx.constraintlayout.widget.ConstraintLayout>